--- a/style.css
+++ b/style.css
@@ -2,6 +2,39 @@
 Folha de estilo site One page HTML5 e CSS3
 */
 
-body{
-	background-color: #ff0000;
+
+/*
+Folha de estilo do site one page HTML5 e CSS3
+@author Eliardo 
+
+*/
+
+/* Smartphone Portrait */
+
+/* Smartphne Landscape  */
+@media (min-width: 576px) {
+	body{
+		background-color: #0ff;
+	}
 }
+
+/* Tablet Portrait */
+@media (min-width: 768px) {
+	body{
+		background-color: #ff0;
+	}
+}
+/* Tablet Landscape */
+@media (min-width: 992px) {
+	body{
+		background-color: #f60;
+	}
+}
+
+/* PC */
+@media (min-width: 1200px) {
+	body{
+		background-color: #f00;
+	}
+}
+
