--- a/style.css
+++ b/style.css
@@ -2,6 +2,26 @@
 Folha de estilo site One page HTML5 e CSS3
 */
 
+/* Importação (Google Fontes) */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+
+/* CSS Reset */
+*{
+	margin: 0;
+	border: 0;
+	padding: 0;
+}
+
+body {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 1em;
+}
+
+/* Layout */
+.Container{
+	margin: 0 auto;
+	background-color: #77ff00;
+}
 
 /*
 Folha de estilo do site one page HTML5 e CSS3
@@ -16,6 +36,10 @@ Folha de estilo do site one page HTML5 e CSS3
 	body{
 		background-color: #0ff;
 	}
+	/* Layout */
+	.Container {
+		max-width: 540px;
+	}
 }
 
 /* Tablet Portrait */
@@ -23,11 +47,19 @@ Folha de estilo do site one page HTML5 e CSS3
 	body{
 		background-color: #ff0;
 	}
+	/* Layout */
+	.Container {
+		max-width: 720px;
+	}
 }
 /* Tablet Landscape */
 @media (min-width: 992px) {
 	body{
 		background-color: #f60;
+	}
+	/* Layout */
+	.Container {
+		max-width: 960px;
 	}
 }
 
@@ -35,6 +67,10 @@ Folha de estilo do site one page HTML5 e CSS3
 @media (min-width: 1200px) {
 	body{
 		background-color: #f00;
+	}
+	/* Layout */
+	.Container {
+		max-width: 1140px;
 	}
 }
 
