--- a/style.css
+++ b/style.css
@@ -20,7 +20,18 @@ body {
 /* Layout */
 .Container{
 	margin: 0 auto;
-	background-color: #77ff00;
+}
+
+.Flex {
+	display: flex;
+	justify-content: space-between;
+}
+
+/* topo do site */
+#topo {
+	position: fixed;
+	right: 10px;
+	bottom: 10px;
 }
 
 /*
@@ -31,11 +42,52 @@ Folha de estilo do site one page HTML5 e CSS3
 
 /* Smartphone Portrait */
 
+/* Cabeçalho */
+header {
+	height: 60px;
+}
+
+#logo img {
+	width: 128px;
+	height: 128px;
+}
+
+#check {
+	display: none;
+}
+
+label {
+	font-size: 3em;
+	padding-right: 15px;
+}
+
+nav ul {
+	list-style: none;
+	background-color: #343538;
+	height: 100vh;
+	position: fixed;
+	top: 60px;
+	right: -100%;
+	width: 100%;
+	transition: all 0.5s;
+}
+
+#check:checked ~ ul {
+	right: 0;
+}
+
+nav ul li {
+	padding: 20px;
+	border-bottom: 1px solid #a9a9a9;	
+}
+
+nav ul li a {
+	text-decoration: none;
+	color: #fff;
+}
+
 /* Smartphne Landscape  */
 @media (min-width: 576px) {
-	body{
-		background-color: #0ff;
-	}
 	/* Layout */
 	.Container {
 		max-width: 540px;
@@ -44,9 +96,6 @@ Folha de estilo do site one page HTML5 e CSS3
 
 /* Tablet Portrait */
 @media (min-width: 768px) {
-	body{
-		background-color: #ff0;
-	}
 	/* Layout */
 	.Container {
 		max-width: 720px;
@@ -54,9 +103,6 @@ Folha de estilo do site one page HTML5 e CSS3
 }
 /* Tablet Landscape */
 @media (min-width: 992px) {
-	body{
-		background-color: #f60;
-	}
 	/* Layout */
 	.Container {
 		max-width: 960px;
@@ -65,12 +111,43 @@ Folha de estilo do site one page HTML5 e CSS3
 
 /* PC */
 @media (min-width: 1200px) {
-	body{
-		background-color: #f00;
-	}
 	/* Layout */
 	.Container {
 		max-width: 1140px;
+	}
+	/* Cabeçalho */
+	header {
+		height: 120px;
+	}
+	#logo img {
+		width: 189px;
+		height: 189px;
+		margin-top: 30px;
+	}
+
+	label {
+		display: none;
+	}
+
+	nav ul {
+		position: static;
+		height: auto;
+		background-color: transparent;
+		margin-top: 50px;
+	}
+
+	nav ul li {
+		float: left;
+		border: 0;
+
+	}
+
+	nav ul li a {
+		color: #343538;
+	}
+
+	nav ul li a:hover{
+		color: #c00000;
 	}
 }
 
