--- a/style.css
+++ b/style.css
@@ -27,6 +27,17 @@ body {
 	justify-content: space-between;
 }
 
+.Botao {
+	text-decoration: none;
+	color: #fff;
+	font-size: 1.3em;
+	font-weight: 700;
+	background-color: #c00000;
+	padding: 10px 40px;
+	border: 2px solid #fff;
+	border-radius: 25px;
+}
+
 /* topo do site */
 #topo {
 	position: fixed;
@@ -86,6 +97,29 @@ nav ul li a {
 	color: #fff;
 }
 
+/* Destaque */
+main {
+	height: 75vh;
+	/* background: url(img/banner.jpg); */
+	background-size: cover;
+	color: #fff;	
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
+
+}
+
+main h1 {
+	font-size: 2.5em;	
+}
+
+main h2 {
+	font-size: 1em;
+	margin: 20px 0px 50px 0px;
+
+}
+
 /* Smartphne Landscape  */
 @media (min-width: 576px) {
 	/* Layout */
@@ -94,11 +128,27 @@ nav ul li a {
 	}
 }
 
+/* Destaque */
+	main h1, main h2 {
+		text-shadow: #000 0.05em 0.05em 0.05em;
+	}
+
 /* Tablet Portrait */
 @media (min-width: 768px) {
 	/* Layout */
 	.Container {
 		max-width: 720px;
+	}
+	main {
+		height: 45vh;
+	}
+	
+	main h1 {
+		font-size: 5.5em;
+	}
+
+	main h2 {
+		font-size: 2em;
 	}
 }
 /* Tablet Landscape */
@@ -106,6 +156,10 @@ nav ul li a {
 	/* Layout */
 	.Container {
 		max-width: 960px;
+	}
+	/* Destaque */
+	main {
+		height: 70vh;
 	}
 }
 
