--- a/style.css
+++ b/style.css
@@ -32,6 +32,11 @@ body {
 	align-items: center;
 }
 
+.Flex3 {
+	display: flex;
+	flex-direction: column;
+}
+
 .Botao {
 	text-decoration: none;
 	color: #fff;
@@ -159,11 +164,38 @@ main h2 {
 	margin-right: 10px;
 }
 
+/* One page */
+#onepage {
+	padding: 50px 10px;
+}
+
+#onepage h2 {
+	margin-bottom: 10px;
+}
+
+#onepage p {
+	margin-bottom: 25px;
+}
+
+#video iframe{
+	width: 340px;
+	height: 191 px;
+	border: 0;
+}
+
+
 /* Smartphne Landscape  */
+
 @media (min-width: 576px) {
 	/* Layout */
 	.Container {
 		max-width: 540px;
+	}
+
+	/* One page */
+	#video iframe{
+		width: 560px;
+		height: 315px;
 	}
 }
 
@@ -255,6 +287,12 @@ main h2 {
 	#destaqueSobre img {
 		border-radius: 50%;
 		margin-right: 50px;
+	}
+
+	/* One page */
+	.Flex3 {
+		flex-direction: row;
+		align-items: center;
 	}
 }
 
